--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,10 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+monitor_echo = yes
 lib_deps = adafruit/DHT sensor library@^1.4.6
+  adafruit/Adafruit SSD1306
+  adafruit/Adafruit GFX Library
   knolleary/PubSubClient@^2.8
   bblanchon/ArduinoJson@^7.0.4
   blynkkk/Blynk
